tests/correctness/resources/miniboxing/tests/compile/gh-bug-185-funcs+2-no-plugin.check
newSource1.scala:2: error: The method identityFun was compiled with the miniboxing plugin and can only be called by code also compiled with the miniboxing plugin (see scala-miniboxing.org/compatibility) [mbox=0.4, scala=2.11]
  Test.identityFun(3)
       ^